--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,17 @@ code {
 }
 
 /* MENU BAR */
-svg {
-  color : "white";
-}
+
+ /* HOME PAGE */
+ .home-page {
+  height: 100vh;
+  width: 100vw;
+ }
+
+ .home-page-container-1 {
+  padding: 60px;
+  height: fit-content;
+  width: 100vw;
+  background-image: url(../src/assets/hero-blob-scene.svg);
+  background-size: cover;
+ }
