--- a/src/index.css
+++ b/src/index.css
@@ -112,13 +112,17 @@ body {
  .button-box {
   display: flex;
   position: relative;
-  justify-content: space-around;
-  align-items: center;
+  justify-content: center;
  }
 
  .button-box h3 {
   font-size: 20px;
   font-weight: 600;
+ }
+
+ .button-col {
+  display: flex;
+  justify-content: space-around;
  }
 
  #btn-custom-primary {
@@ -169,10 +173,6 @@ body {
   padding-bottom: 100px;
   padding-top: 80px;
   color: var(--lightgrey);
- }
-
- .feature-col {
-  
  }
 
  .home-page-background-3 {
