--- a/src/index.css
+++ b/src/index.css
@@ -181,9 +181,13 @@ body {
   display: block;
   position: relative;
   align-items: center;
-  padding-bottom: 100px;
-  padding-top: 80px;
+  padding-bottom: 60px;
   color: var(--lightgrey);
+  width: 68vw;
+ }
+
+ .faq-heading {
+  padding-bottom: 20px;
  }
 
  .home-page-background-3 {
@@ -204,7 +208,7 @@ body {
   align-items: center;
   padding-bottom: 30px;
   color: var(--lightgrey);
-  width: 70vw;
+  width: 65vw;
   max-width: 750px;
  }
 
