--- a/src/index.css
+++ b/src/index.css
@@ -74,6 +74,7 @@ body {
 }
 
  /* HOME PAGE */
+
  .home-page {
   height: 100vh;
   width: 100vw;
@@ -82,7 +83,7 @@ body {
  }
 
  .home-page-background-1 {
-  padding-top: 170px;
+  padding-top: 180px;
   padding-bottom: 60px;
   height: fit-content;
   width: 100vw;
@@ -98,7 +99,7 @@ body {
   display: block;
   position: relative;
   align-items: center;
-  width: 70vw;
+  width: 65vw;
   max-width: 750px;
  }
 
@@ -112,6 +113,7 @@ body {
  .home-page-subtitle {
   color: white;
   padding-bottom: 25px;
+  width: 60vw;
  }
 
  .home-page-subtitle h3 {
@@ -181,6 +183,10 @@ body {
   text-align: left;
  }
 
+ .home-page-col {
+  width: 35vw;
+ }
+
  .home-page-container-3 {
   display: block;
   position: relative;
@@ -217,6 +223,26 @@ body {
  }
 
 /* COMPANY PAGE */
+.company-page-background {
+  padding-bottom: 60px;
+  height: 100vh;
+  width: 100vw;
+  background-image: url(../src/@types/assets/hero-blob-scene.svg);
+  background-size: cover;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.company-page-container {
+  display: block;
+  position: relative;
+  align-items: center;
+  width: 60vw;
+  max-width: 750px;
+}
+
 .email-entry {
   padding-top: 5px;
   margin-left: 20px;
