--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 * {
   font-family: "Rubik", sans-serif;
   text-decoration: none;
+  padding: none;
 }
 
 :root h1 {
@@ -316,14 +317,54 @@ body {
   top: -80px;
 }
 
+.assessment-page-title {
+  padding-bottom: 30px;
+  color: white;
+  position: relative;
+  display: block;
+  justify-content: center;
+ }
+
+ .assessment-page-subtitle {
+  color: white;
+  padding-bottom: 25px;
+  width: 65vw;
+  display: block;
+  justify-content: center;
+ }
+
+ .assessment-page-subtitle h3 {
+  color: var(--lightgrey);
+ }
+
 
 /* TASK CARD */
 
 .task-card-container {
-  display: block;
-  padding: 10px;
+  display: flex;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 10px;
+  padding-bottom: 2px;
+  height: fit-content;
+  width: 100%;
+  max-width: 800px!important;
+
+  word-break: normal;
+
   background-color: var(--darkblue);
   border: 2px solid var(--lightgrey);
+  border-radius: 10px;
+  text-align: left;
+}
+
+.task-card-container h2 {
+  color: white;
+}
+
+.task-icon {
+  height: 60px;
+  padding-bottom: 10px;
 }
 
 
