--- a/src/index.css
+++ b/src/index.css
@@ -52,8 +52,6 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: 'Rubik', sans-serif;
-=======
-    font-family: "Rubik", sans-serif;
     text-decoration: none;
     padding: none;
 }
@@ -515,7 +513,7 @@ body {
   font-display: swap;
   src: url(https://fonts.gstatic.com/s/rubik/v23/iJWKBXyIfDnIV7nBrXyw023e.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
-=======
+}
 
 .menu-bar {
     height: 120px;
