--- a/src/index.css
+++ b/src/index.css
@@ -316,8 +316,8 @@ body {
 
 /* COMPANY PAGE */
 .company-page-background {
-  padding-bottom: 60px;
-  height: 100vh;
+  /* padding-bottom: 60px; */
+  /* height: 100vh; */
   width: 100vw;
   background-image: url(../src/@types/assets/hero-blob-scene.svg);
   background-size: cover;
@@ -336,6 +336,25 @@ body {
   max-width: 750px;
 }
 
+.company-page-subtitle {
+  color: white;
+  padding-bottom: 25px;
+  width: 90%;
+  position: relative;
+  display: block;
+  justify-content: center;
+  align-self: center;
+ }
+
+ .company-button-box h3 {
+  color: white;
+ }
+
+
+ .company-page-subtitle h3 {
+  color: var(--lightgrey);
+ }
+
 .email-entry {
   padding-top: 5px;
   margin-left: 20px;
@@ -345,6 +364,7 @@ body {
 /* ASSESSMENT PAGE */
 
 .assessment-page-background {
+  padding-top: 80px;
   padding-bottom: 60px;
   height: 100vh;
   width: 100vw;
@@ -743,7 +763,7 @@ body {
 }
 
 .home-page-container-1 {
-    padding-top: 160px;
+    /* padding-top: 160px; */
     padding-bottom: 80px;
     height: fit-content;
     width: 100vw;
@@ -753,8 +773,8 @@ body {
 
 /* COMPANY PAGE */
 .company-page-background {
-    padding-bottom: 60px;
-    height: 100vh;
+    /* padding-bottom: 60px; */
+    height: 75vh;
     width: 100vw;
     background-image: url(../src/assets/hero-blob-scene.svg);
     background-size: cover;
@@ -805,7 +825,7 @@ body {
 }
 
 .assessment-page-container {
-  padding-top: 250px;
+  padding-top: 100px;
     display: flex;
     position: relative;
     align-items: center;
