--- a/src/index.css
+++ b/src/index.css
@@ -251,6 +251,7 @@ body {
     padding-bottom: 60px;
     height: 100vh;
     width: 100vw;
+    min-height: fit-content;
     background-image: url(./@types/assets/hero-blob-scene.svg);
     background-size: cover;
     position: relative;
@@ -260,14 +261,13 @@ body {
 }
 
 .assessment-page-container {
-  padding-top: 250px;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    width: 65vw;
-    max-width: 750px;
-    top: -80px;
+  margin-top: 160px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 65vw;
+  max-width: 750px;
 }
 
 .assessment-page-title {
@@ -290,51 +290,6 @@ body {
     color: var(--lightgrey);
 }
 
-/* TASK CARD */
-
-.task-card-container {
-    display: flex;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 2px;
-    height: fit-content;
-    width: 100%;
-    max-width: 800px !important;
-
-    word-break: normal;
-
-    background-color: var(--darkblue);
-    border: 2px solid var(--lightgrey);
-    border-radius: 10px;
-    text-align: left;
-}
-
-.task-card-container h2 {
-    color: white;
-    text-decoration: none;
-}
-
-.task-card-container a {
-    color: white;
-}
-
-.task-card-container a:hover {
-    color: rgb(212, 212, 212);
-}
-.task-card-container h3 {
-    color: rgb(138, 133, 133);
-}
-
-.task-card-container:hover {
-    background-color: var(--lightblue);
-    border-color: var(--darkblue);
-}
-
-.task-icon {
-    height: 60px;
-    padding-bottom: 10px;
-}
 
 
 /* FONT STUFF */
