Jb/login routing (#11)
* added home page and fixed routing issue

* added home, assessments, and companies pages

* added NoRoute page for robustness

* added home page, companies and assessment page components

* added a navbar with routing to companies and assessments pages

* added assets

* logo assets

* added assets

* added hatchr logo to navbar

* added images from original hatchr website, made navbar transparent, added background image on home page

* added some text and formatting to homepage

* updated navbar for companies/developers

* upgraded project to use typescript, svgs are still broken though - working on that

* fixed svgsgit add . considering project UPGRADED TO TYPESCRIPT but am open to crit

* fixed svg error in MenuBar

* okay fixed svg problem actually i think

* added font familyand applied fonts to home page

* made menu bar disappear/reappear on scroll, restructured home page a bit

* added button box style and hover, still need to center align buttons in the box

* added home page container 2 paragraphs and icons, styled, layout still to be formatted.

* added styling and content to company page

* added styling to assessments page, added link to home page to logo in navbar

* added footer to home page

* finished feature walkthrough section

* finished FAQ section

* updated navbar links to change colour on hover and active

* fixed navbar spacing and made navbar collapse automatically on scroll

* fixed bug where navbar wouldnt update if navigated to home page via logo

* added email input to company page

* fixed column width issue on home page

* fixed scaling issue in main page css

* fixed button spacing issue on home page, home page tentatively finished

* WIP: added a task component for assessment page

* centered and restricted navbar expansion as screen expands

* more menu bar centering and spacing fixes

* fixed menu bar links and login button alignment, as

--- a/src/index.css
+++ b/src/index.css
@@ -56,57 +56,6 @@ body {
   padding: none;
 }
 
-/* MENU BAR */
-.menu-bar {
-  height: 120px;
-  width: 100vw;
-  position: absolute;
-  display: block;
-
-  user-select: none;
-}
-
-.menu-bar-container {
-  width: 90vw!important;
-  min-width: 650px;
-  max-width: 1200px!important;
-}
-
-.menu-links {
-  position: relative;
-  display: flex;
-  flex-grow: 1;
-  justify-content: end;
-  align-items: center;
-  margin-top: 20px;
-}
-
-.nav-link {
-  margin-right: 25px;
-}
-
-.nav-link h3 {
-  color: white;
-}
-
-.nav-link:hover h3 {
-  color: var(--lightgrey);
-}
-
-.nav-link:active h3 {
-  color: var(--lightgrey);
-}
-
-.nav-button {
-  margin-right: 25px;
-  margin-bottom: 7px;
-  height: 40px;
-}
-
-.nav-button h3 {
-  margin-top: -5px;
-}
-
  /* HOME PAGE */
 
  .home-page {
@@ -121,7 +70,7 @@ body {
   padding-bottom: 60px;
   height: fit-content;
   width: 100vw;
-  background-image: url(../src/@types/assets/hero-blob-scene.svg);
+  background-image: url(./@types/assets/hero-blob-scene.svg);
   background-size: cover;
   position: relative;
   display: flex;
@@ -268,7 +217,7 @@ body {
   padding-bottom: 60px;
   height: 100vh;
   width: 100vw;
-  background-image: url(../src/@types/assets/hero-blob-scene.svg);
+  background-image: url(./@types/assets/hero-blob-scene.svg);
   background-size: cover;
   position: relative;
   display: flex;
@@ -284,7 +233,6 @@ body {
   width: 65vw;
   max-width: 750px;
 }
-
 
 .company-button-col {
   display: flex;
@@ -303,7 +251,8 @@ body {
     padding-bottom: 60px;
     height: 100vh;
     width: 100vw;
-    background-image: url(../src/assets/hero-blob-scene.svg);
+    min-height: fit-content;
+    background-image: url(./@types/assets/hero-blob-scene.svg);
     background-size: cover;
     position: relative;
     display: flex;
@@ -312,14 +261,13 @@ body {
 }
 
 .assessment-page-container {
-  padding-top: 250px;
-    display: flex;
-    position: relative;
-    align-items: center;
-    justify-content: center;
-    width: 65vw;
-    max-width: 750px;
-    top: -80px;
+  margin-top: 160px;
+  display: flex;
+  position: relative;
+  align-items: center;
+  justify-content: center;
+  width: 65vw;
+  max-width: 750px;
 }
 
 .assessment-page-title {
@@ -342,51 +290,6 @@ body {
     color: var(--lightgrey);
 }
 
-/* TASK CARD */
-
-.task-card-container {
-    display: flex;
-    padding-left: 20px;
-    padding-right: 20px;
-    padding-top: 10px;
-    padding-bottom: 2px;
-    height: fit-content;
-    width: 100%;
-    max-width: 800px !important;
-
-    word-break: normal;
-
-    background-color: var(--darkblue);
-    border: 2px solid var(--lightgrey);
-    border-radius: 10px;
-    text-align: left;
-}
-
-.task-card-container h2 {
-    color: white;
-    text-decoration: none;
-}
-
-.task-card-container a {
-    color: white;
-}
-
-.task-card-container a:hover {
-    color: rgb(212, 212, 212);
-}
-.task-card-container h3 {
-    color: rgb(138, 133, 133);
-}
-
-.task-card-container:hover {
-    background-color: var(--lightblue);
-    border-color: var(--darkblue);
-}
-
-.task-icon {
-    height: 60px;
-    padding-bottom: 10px;
-}
 
 
 /* FONT STUFF */
