--- a/src/components/TaskCard/TaskCard.css
+++ b/src/components/TaskCard/TaskCard.css
@@ -7,7 +7,7 @@
     padding-top: 10px;
     padding-bottom: 2px;
     height: fit-content;
-    width: 100%;
+    width: 90%!important;
     max-width: 800px !important;
 
     word-break: normal;
