--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,10 @@ body {
   border-radius: 15px; 
   background-color: var(--hotpink);
   border: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 0px;
  }
 
  #btn-custom-primary:hover {
@@ -77,9 +78,10 @@ body {
   border-radius: 15px; 
   background-color: var(--darkblue);
   border: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 15px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 10px;
+  padding-bottom: 0px;
  }
 
  #btn-custom-secondary:hover {
