finished contact form cleanup? also fixed some button styling

--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,11 @@ body {
   border-radius: 15px; 
   background-color: var(--hotpink);
   border: none;
+  height: 38px;
+  min-width: fit-content;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 10px;
+  padding-top: 9px;
   padding-bottom: 0px;
  }
 
@@ -78,9 +80,10 @@ body {
   border-radius: 15px; 
   background-color: var(--darkblue);
   border: none;
+  height: 38px;
   padding-left: 15px;
   padding-right: 15px;
-  padding-top: 10px;
+  padding-top: 9px;
   padding-bottom: 0px;
  }
 
