--- a/src/pages/Assessments/Assessments.css
+++ b/src/pages/Assessments/Assessments.css
@@ -1,5 +1,12 @@
 /* ASSESSMENT PAGE */
 
+.assessment-page {
+  height: 100vh;
+  width: 100vw;
+  position: absolute;
+  display: block;
+ }
+
 .assessment-page-background {
   padding-bottom: 60px;
   height: 100vh;
