--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -9,9 +9,9 @@
   }
   
   .menu-bar-container {
-    width: 90vw!important;
-    min-width: 650px;
-    max-width: 1200px!important;
+    width: 80%!important;
+    min-width: 500px;
+    max-width: 1100px!important;
   }
   
   .menu-links {
