--- a/src/index.css
+++ b/src/index.css
@@ -60,9 +60,12 @@ body {
   border-radius: 15px; 
   background-color: var(--hotpink);
   border: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 15px;
+  height: 38px;
+  min-width: fit-content;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 9px;
+  padding-bottom: 0px;
  }
 
  #btn-custom-primary:hover {
@@ -77,9 +80,11 @@ body {
   border-radius: 15px; 
   background-color: var(--darkblue);
   border: none;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-top: 15px;
+  height: 38px;
+  padding-left: 15px;
+  padding-right: 15px;
+  padding-top: 9px;
+  padding-bottom: 0px;
  }
 
  #btn-custom-secondary:hover {
