--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -8,10 +8,10 @@
     user-select: none;
   }
   
-  .menu-bar-container {
-    width: 80%!important;
+  .menu-bar-container.container {
+    width: 70%;
     min-width: 500px;
-    max-width: 1100px!important;
+    max-width: 1100px;
   }
   
   .menu-links {
