--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,11 +1,8 @@
 .footer {
-  height: 60px;
-  width: 100vw;
   position: relative;
   bottom: 0;
-  display: block;
-
-  user-select: none;
+  width: 100%;
+  height: 2.5rem;
 }
 
 .footer-container.container {
