--- a/src/pages/Assessments/Assessments.css
+++ b/src/pages/Assessments/Assessments.css
@@ -1,9 +1,9 @@
 /* ASSESSMENT PAGE */
 
 .assessment-page {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: relative;
   display: block;
  }
 
