--- a/src/pages/Companies/Companies.css
+++ b/src/pages/Companies/Companies.css
@@ -1,9 +1,9 @@
 /* COMPANY PAGE */
 
 .company-page {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: relative;
   display: block;
 }
 
