--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,9 +2,9 @@
  /* HOME PAGE */
 
  .home-page {
-  height: 100vh;
-  width: 100vw;
-  position: absolute;
+  height: 100%;
+  width: 100%;
+  position: relative;
   display: block;
  }
 
