--- a/src/index.css
+++ b/src/index.css
@@ -8,22 +8,26 @@
   font-size: 44px;
   font-weight: 600;
   color: white;
+  margin-bottom: 0;
 }
 
 :root h2 {
   font-size: 24px;
   font-weight: 600;
   color: white;
+  margin-bottom: 0;
 }
 
 :root h3 {
   font-size: 18px;
   font-weight: 600;
+  margin-bottom: 0;
 }
 
 :root p {
   font-size: 18px;
   font-weight: 400;
+  margin-bottom: 0;
 }
 
 :root span {
