footer exists and stuff, working on design

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -3,6 +3,10 @@
   bottom: 0;
   width: 100%;
   height: fit-content;
+  display: block;
+
+  background-size: cover;
+  background-color: var(--charcoal);
 }
 
 .footer-container.container {
