--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
 
  .home-page {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   position: absolute;
   display: block;
  }
@@ -12,7 +12,7 @@
   padding-top: 180px;
   padding-bottom: 60px;
   height: fit-content;
-  width: 100vw;
+  width: 100%;
   background-image: url(../../@types/assets/hero-blob-scene.svg);
   background-size: cover;
   position: relative;
@@ -67,7 +67,7 @@
 
  .home-page-background-2 {
   height: fit-content;
-  width: 100vw;
+  width: 100%;
   background-color: var(--charcoal);
   background-size: cover;
   position: relative;
@@ -107,7 +107,7 @@
  .home-page-background-3 {
   padding-top: 60px;
   height: fit-content;
-  width: 100vw;
+  width: 100%;
   background-image: url(../../../src/@types/assets/cta-blob-scene.svg);
   background-size: cover;
   position: relative;
