--- a/src/components/MenuBar/MenuBar.css
+++ b/src/components/MenuBar/MenuBar.css
@@ -1,7 +1,7 @@
 /* MENU BAR */
 .menu-bar {
     height: 120px;
-    width: 100vw;
+    width: 100%;
     position: absolute;
     display: block;
   
