--- a/src/pages/Assessments/Assessments.css
+++ b/src/pages/Assessments/Assessments.css
@@ -2,7 +2,7 @@
 
 .assessment-page {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   position: absolute;
   display: block;
  }
@@ -10,7 +10,7 @@
 .assessment-page-background {
   padding-bottom: 60px;
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   min-height: fit-content;
   background-image: url(../../@types/assets/hero-blob-scene.svg);
   background-size: cover;
